test/algeff/eff-constant.kk
// issue: https://github.com/koka-lang/koka/issues/353
fun x() : <e> ()
  ()